--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#5EC979",
-    "titleBar.activeBackground": "#74D08B",
-    "titleBar.activeForeground": "#0A1D0F"
+    "activityBar.background": "#12341A",
+    "titleBar.activeBackground": "#194925",
+    "titleBar.activeForeground": "#F5FCF7"
   }
 }
